doc/         PR c++/18644         * doc/invoke.texi (-Wsynth): Don't document, as it now is void 	of         semantics.

cp/
        PR c++/18644
        * call.c (build_new_op): Remove check for -Wsynth.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97318 138bc75d-0d04-0410-961f-82ee72b054a4